k8s/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: __NAMESPACE_NAME__-backend
  namespace: __NAMESPACE_NAME__
  annotations:
    kubernetes.io/ingress.class: 'nginx'    
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.kubernetes.io/proxy-body-size: 500m
    ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  tls:
  - hosts:
    - __NAMESPACE_NAME__-backend.prod.gke.papers.tech
    secretName: __NAMESPACE_NAME__-prod-backend-tls
  rules:
  - host: __NAMESPACE_NAME__-backend.prod.gke.papers.tech
    http:
      paths:
        - backend:
            serviceName: __NAMESPACE_NAME__-backend-service
            servicePort: 8000
